[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Nicolas Torres <nicolastorres@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
regex = "1.4.3"
eyre = "0.6.5"
lazy_static = "1.4.0"
fixedbitset = "0.3.2"
